platform/aws/audio-edge/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: apps
  labels:
    area: apps
    istio-injection: disabled
