platform/aws/audio-edge/base/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: audio-gateway
  namespace: audio-ingress
spec:
  selector:
    app: audio-ingress
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
